# SkillLoop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.github/: SECURITY.md  SUPPORTED_VERSIONS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agendex/: PLAN.md
agents/: __init__.py  __main__.py  eventbus.py  orchestrator.py  topology.py
docs/: Contribution-to-ECC.md  HANDOFF.md  architecture.md  cli.md  compatibility.md  memory-system-diagrams.html  migration.md  next-steps.md  plan-goal-loop-ecc-pr1-rewrite.md  plan-goal-loop-executable.md  safety.md  trace-schema.md  training-integrations.md
docs/analysis/: loop-engineering-analysis.md
docs/plans/: 2026-06-05-skillloop-mvp.md
examples/traces/: simple_trace.jsonl
references/hermes-skills/: README.md
references/hermes-skills/cron-job-workflows/: SKILL.md
references/hermes-skills/goal-loop/: SKILL.md
references/hermes-skills/pre-loop-checklist/: SKILL.md
skillloop/: __init__.py  __main__.py  benchmark.py  cli.py  conditions.py  controller.py  dataset.py  dataset_readiness.py  diagnostics.py  errors.py  fs_safety.py  loop.py  policy.py  provenance.py  sanitize.py  schema.py  service.py  store.py  training_config.py
skillloop documentation/: 00-master-synthesis.md  00-top-5-actions-deep-dive.md  01-loop-engineering-memory-first-design.md  02-dumb-sandbox-smart-host.md  03-how-cursor-indexes-codebase.md  04-obsidian-kimi-research-system.md  05-self-improvement-loop-skills.md  06-factory-2-software-factories.md  07-codex-maxxing-operating-loop.md  08-agent-harness-repair-itself.md  09-building-recursive-agent-systems.md  10-agentic-backend-production-ready.md  11-deterministic-workflows-analysis.md  12-deterministic-workflows-recommendation.md  13-checkpoint-replay-technical-design.md  EXECUTIVE-SUMMARY.md
skillloop/adapters/: claude_code.py  generic_jsonl.py  hermes.py
skillloop/application/: __init__.py  _shared.py  benchmark.py  controller.py  distill.py  evaluate.py  export.py  ingest.py  loop.py  requests.py  review.py  service.py  training.py
skillloop/apply/: filesystem.py
skillloop/distill/: memory.py  skills.py
skillloop/eval/: evidence.py  legacy.py  registry.py  rubric.py
skillloop/export/: dpo.py  okf.py  sft.py
skillloop/infrastructure/services/: __init__.py  launchd.py  systemd.py
skillloop/infrastructure/sqlite/: migrations.py  repository.py
skillloop/interfaces/cli/: __init__.py  _shared.py  controller.py  dataset.py  distill.py  doctor.py  evaluate.py  export.py  ingest.py  init.py  loop.py  main.py  review.py  service.py  setup.py  status.py
skillloop/ports/: service_manager.py
skillloop/review/: queue.py
tests/: test_adapters.py  test_backward_compat_schema.py  test_benchmark.py  test_claude_code.py  test_cli.py  test_cli_backward_compat.py  test_controller.py  test_dataset_readiness.py  test_diagnostics.py  test_distill.py  test_e2e.py  test_eval.py  test_eval_registry.py  test_export.py  test_fs_safety.py  test_loop.py  test_policy_validation.py  test_review_apply.py  test_sanitize.py  test_schema.py  test_secret_redaction.py  test_service.py  test_store.py  test_training_config.py
