[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillloop"
version = "0.1.0"
description = "A local learning governor for agent traces, evaluation, proposals, and training-data preparation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Raghav"}]
dependencies = []
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
skillloop = "skillloop.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skillloop*"]
