[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillloop"
version = "0.2.0"
description = "A governed learning layer for AI agents — turns execution traces into reviewed memories, reusable skills, and evidence-backed training data."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Raghav"}]
dependencies = []
keywords = [
    "ai-agents",
    "agent-evaluation",
    "agent-memory",
    "agent-traces",
    "evaluation",
    " machine-learning",
    "training-data",
    "sft",
    "dpo",
    "fine-tuning",
    "llmops",
    "self-improving-agents",
    "review-gated-learning",
    "evidence-based-improvement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/lamenting-hawthorn/skillloop"
Documentation = "https://github.com/lamenting-hawthorn/skillloop#readme"
Issues = "https://github.com/lamenting-hawthorn/skillloop/issues"
Source = "https://github.com/lamenting-hawthorn/skillloop"

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=5,<7", "ruff>=0.15", "mypy>=1.0", "coverage>=7.0", "build>=1.0"]

[project.scripts]
skillloop = "skillloop.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_configs = true
exclude = ["build/", "dist/", ".venv/", ".worktrees/"]

[tool.coverage.run]
branch = true
source = ["skillloop"]
command_line = "-m pytest"

[tool.coverage.paths]
source = ["skillloop"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skillloop*"]
